# concreteML_benchmark

./: .gitignore  README.md  example_test_config.yaml  example_test_config_uci.yaml  exp_dtclassifier.yaml  exp_elasticnet.py  exp_lasso.py  exp_linear_regression.py  exp_logistic_regression.py  exp_logistic_regression.yaml  exp_logistic_regression.yml  exp_ridge.py  exp_sdg_classifier.py  exp_sdg_classifier.yml  exp_sdg_regressor.py  exp_sgd_classifier.yaml  experiment.py  get_datasets.py  main.py  main_random.py  pyproject.toml  quick_fix_GPU.md  requirements.txt  run_benchmark.py  utils.py
.artifacts/: _lambda__proxy.1.initial.graph.txt  _lambda__proxy.2.final.graph.txt  _lambda__proxy.parameters.txt  environment.txt  mlir.txt  requirements.txt  traceback.txt
experiment_examples/: README.md  simple_experiment.yaml
experiments_classification/linear/: exp_logisticregression.yaml
experiments_classification/tree/: exp_dtclassifier.yaml  exp_dtclassifier_uci.yaml  exp_dtclassifier_uci17_simplified.yaml  exp_dtclassifier_uci45.yaml  exp_dtclassifier_uci863.yaml  exp_rfclassifier_uci17.yaml  exp_rfclassifier_uci329.yaml  exp_rfclassifier_uci_multiple.yaml
tests/: test_experiment.py
