[project]
name = "concreteml-benchmark"
version = "0.1.0"
description = "Benchmarking tool for ConcreteML library performance and accuracy"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "concrete-ml",
    "click>=8.1.8",
    "pyyaml>=6.0.2",
    "scikit-learn",
    "mlflow",
]
